--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,6 +29,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
+
 p {
   font-weight: normal;
   font-size: 16px;
@@ -56,7 +60,7 @@ p {
 }
 
 .content-container {
-    padding: 160px 20px;
+  padding: 160px 20px;
 }
 
 .content h1 {
@@ -131,10 +135,50 @@ nav a {
   transition: all 100ms ease-in-out;
 }
 
-nav a:hover, nav li.active a {
+nav a:hover,
+nav li.active a {
   color: var(--branding-color);
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  text-align: center;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 16px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
 
 @media (max-width: 900px) {
   h1 {
@@ -144,6 +188,10 @@ nav a:hover, nav li.active a {
   h2 {
     font-size: 44px;
     line-height: 2;
+  }
+
+  h4 {
+    font-size: 26px;
   }
 
   .hero {
@@ -161,6 +209,6 @@ nav a:hover, nav li.active a {
   }
 
   nav a {
-   font-size: 14px; 
+    font-size: 14px;
   }
 }
