--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,7 +29,7 @@ h2 {
   font-size: 64px;
 }
 
-h4 {
+h3 {
   font-size: 48px;
 }
 
@@ -42,7 +42,7 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 
 .hero p {
@@ -60,7 +60,7 @@ p {
 }
 
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 
 .content h1 {
@@ -96,8 +96,22 @@ p {
   padding: 15px 30px;
 }
 
+.btn-branding:hover {
+  background: var(--branding-color);
+  color: black;
+}
+
 .btn-branding-outline {
   color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.btn-branding-outline:hover {
+  color: black;
   border: 1px solid var(--branding-color);
   border-radius: 4px;
   font-size: 18px;
@@ -190,12 +204,8 @@ footer .social-links a:hover {
     line-height: 2;
   }
 
-  h4 {
+  h3 {
     font-size: 26px;
-  }
-
-  .hero {
-    padding: 80px 20px;
   }
 
   .content {
